syntax = "proto3";

package sendo.v1.api.oauth;

option go_package = "gitlab.sendo.vn/protobuf/internal-apis-go/oauth";

import "google/api/annotations.proto";

service OAuthService {
    rpc GetUserUsingToken (stream GetUserUsingTokenRequest) returns (stream GetUserUsingTokenResponse) {}
    rpc GetUserUsingTokenV2 (stream GetUserUsingTokenRequestV2) returns (stream GetUserUsingTokenResponseV2) {}
}

message GetUserUsingTokenRequest {
    uint64 message_id = 1;

    string app_id = 2;
    string token = 3;
}

message GetUserUsingTokenResponse {
    uint64 message_id = 1;
    uint64 error_id = 2;

    uint64 user_id = 3;
    string email = 4;
    string phone = 5;

    string first_name = 6;
    string last_name = 7;
}

message GetUserUsingTokenRequestV2 {
    uint64 message_id = 1;

    string app_id = 2;
    string token = 3;
}

message GetUserUsingTokenResponseV2 {
    uint64 message_id = 1;
    uint64 error_id = 2;

    uint64 customer_id = 3;
    uint64 fpt_id = 4;

    string email = 5;
    string phone = 6;

    bool checkout_verified = 7;
    bool email_verified = 8;
    bool phone_verified = 9;

    string first_name = 10;
    string last_name = 11;

    string avatar = 12;
    uint64 birthday = 13;
    uint64 gender = 14;

    uint64 default_shipping = 15;

    uint64 created_at = 16;
    uint64 updated_at = 17;
}
